--- a/UpKeepProject/UpKeepProject/MainPage.xaml
+++ b/UpKeepProject/UpKeepProject/MainPage.xaml
@@ -2,13 +2,11 @@
     x:Class="UpKeepProject.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UpKeepProject"
+    xmlns:local="using:UpKeepProject.ViewModel.App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Grid>
 
       <NavigationView Header="CleanPlus"
                       SelectedItem="{Binding SelectedMenuItem, Mode=TwoWay}">
@@ -30,11 +28,6 @@
           </Frame.ContentTransitions>
         </Frame>
       
-      
-      
-      
-      
-      
+       
       </NavigationView>
-    </Grid>
 </Page>
