--- a/UpKeepProject/UpKeepProject/MainPage.xaml
+++ b/UpKeepProject/UpKeepProject/MainPage.xaml
@@ -2,21 +2,20 @@
     x:Class="UpKeepProject.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UpKeepProject"
+    xmlns:local="using:UpKeepProject.Viewmodel.App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:app="using:UpKeepProject.Viewmodel.App"
+  
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.DataContext>
-        <app:MainPageViewModel/>
+        <local:MainPageViewModel/>
     </Page.DataContext>
 
     <NavigationView SelectedItem ="{Binding SelectedMenuItem, Mode=TwoWay}">
         <NavigationView.MenuItems>
-            <NavigationViewItem Content="Overview" Tag="NEED TO BE MADE"/>
-            <NavigationViewItemSeparator/>
+            <NavigationViewItem Content="Kunde" Tag="OpenPersonaleView"></NavigationViewItem>
             <NavigationViewItem Content="Personale" Tag="OpenPersonaleView"/>
             <NavigationViewItem Content="Kunde" Tag="OpenKundeView"/>
         </NavigationView.MenuItems>
