--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -40,7 +40,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width=".5*"/>
         </Grid.ColumnDefinitions>
         <ListView Grid.Column="0" Grid.Row="0"
                   ItemsSource="{Binding ItemCollection}"
@@ -48,49 +48,75 @@
                   IsEnabled="{Binding EnabledStateCollection}">
         </ListView>
 
-        <Grid Grid.Column="1" Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="5*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
+        <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".5*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0" Grid.Row="0" BorderThickness="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-
-                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-                    <TextBlock Text="Description" 
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Id" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
-                </StackPanel>
 
-                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-                    <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
+                <TextBox Text="{Binding ItemDetails.Id, Mode=TwoWay}"
                              IsEnabled="{Binding EnabledStateDetails}"
                              Style="{StaticResource TextBoxDetailsStyle}"/>
-                </StackPanel>
-            </Grid>
+            </StackPanel>
 
-            <Grid Grid.Column="0" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Name" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
+                             IsEnabled="{Binding EnabledStateDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+            </StackPanel>
 
-                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-                    <Button Command="{Binding ViewCommandsObj[0]}" Content="{Binding ViewCommandsDesc[0]}"
-                            Style="{StaticResource ButtonStyle}" />
-                    <Button Command="{Binding ViewCommandsObj[1]}" Content="{Binding ViewCommandsDesc[1]}"
-                            Style="{StaticResource ButtonStyle}" />
-                    <Button Command="{Binding ViewCommandsObj[2]}" Content="{Binding ViewCommandsDesc[2]}"
-                            Style="{StaticResource ButtonStyle}" />
-                </StackPanel>
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Adresse" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
+                             IsEnabled="{Binding EnabledStateDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+            </StackPanel>
 
-                <TextBlock Grid.Column="1" Grid.Row="0" 
-                           VerticalAlignment="Center" HorizontalAlignment="Center"
-                    Text="{Binding ViewStateDesc}" Style="{StaticResource TextBlockStateStyle}" />
-            </Grid>
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Nummer" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
+                             IsEnabled="{Binding EnabledStateDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+            </StackPanel>
         </Grid>
+
+
+
+
+
+
+
+
+
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+                <Button Command="{Binding ViewCommandsObj[0]}" Content="{Binding ViewCommandsDesc[0]}"
+                            Style="{StaticResource ButtonStyle}" />
+                <Button Command="{Binding ViewCommandsObj[1]}" Content="{Binding ViewCommandsDesc[1]}"
+                            Style="{StaticResource ButtonStyle}" />
+                <Button Command="{Binding ViewCommandsObj[2]}" Content="{Binding ViewCommandsDesc[2]}"
+                            Style="{StaticResource ButtonStyle}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center"
+                    Text="{Binding ViewStateDesc}" Style="{StaticResource TextBlockStateStyle}" />
+            </StackPanel>
+
+            
+        </Grid>
+   
+
     </Grid>
 </Page>
