--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -56,13 +56,22 @@
 
         <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".5*"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
 
-
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="ID" HorizontalAlignment="Center"
+                           Style="{StaticResource TextBlockDetailsStyle}"/>
+                <TextBox Text="{Binding ItemDetails.Id, Mode=TwoWay}"
+                         IsHitTestVisible="{Binding EnabledStateDetails}"
+                         Background="{Binding BackgroundColorDetails}"
+                         Style="{StaticResource TextBoxDetailsStyle}"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Name" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
@@ -71,7 +80,7 @@
                              Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Adresse" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
@@ -80,7 +89,7 @@
                              Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Nummer" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
