--- a/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
@@ -119,7 +119,27 @@
                 <TextBlock Text="ID" 
                            Style="{StaticResource TextSizingforMiddelPart}"
                            HorizontalAlignment="Center"/>
-                
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Name" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Adresse" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Nummer" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
             </StackPanel>
 
         </Grid>
@@ -132,6 +152,7 @@
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
 
+            <!-- ID Data -->
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
                 <ListView
                     ItemsSource="{Binding ItemCollection}"
@@ -141,6 +162,55 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Id}" 
+                                       FontSize="24"
+                                       >
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" 
+                                       FontSize="24">
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Adresse}" 
+                                       FontSize="24">
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Nummer}" 
                                        FontSize="24">
                             </TextBlock>
                         </DataTemplate>
@@ -170,7 +240,7 @@
 
 
 
-
+                <!--Bottom Part-->
         <Grid Grid.Column="0" Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
@@ -185,7 +255,9 @@
 
                     <Button.ContentTemplate>
                         <DataTemplate>
-                            <Image Source="../../Assets/Image/iconfinder_plus_172525.png"/>
+                            <Image Source="../../Assets/Image/iconfinder_plus_172525.png"
+                                   Width="20"
+                                   Height="20"/>
                         </DataTemplate>
 
                     </Button.ContentTemplate>
