--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -40,38 +40,33 @@
             <Setter Property="Height" Value="50"/>
             <Setter Property="Source" Value="ms-appx:///Assets/Image/iconfinder_plus_172525.png" />
         </Style>
+        <Style x:Key="TextSizingforMiddelPart" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+
+        </Style>
     </Page.Resources>
 
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-           
-        </Grid.ColumnDefinitions>
-        <ListView Grid.Column="0" Grid.Row="0"
-                  ItemsSource="{Binding ItemCollection}"
-                  SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
-                  IsEnabled="{Binding EnabledStateCollection}">
-        </ListView>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+
+
+
 
         <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width=".5*"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="ID" HorizontalAlignment="Center"
-                           Style="{StaticResource TextBlockDetailsStyle}"/>
-                <TextBox Text="{Binding ItemDetails.Id, Mode=TwoWay}"
-                         IsHitTestVisible="{Binding EnabledStateDetails}"
-                         Background="{Binding BackgroundColorDetails}"
-                         Style="{StaticResource TextBoxDetailsStyle}"/>
-            </StackPanel>
-
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Name" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
@@ -80,7 +75,7 @@
                              Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Adresse" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
@@ -89,7 +84,7 @@
                              Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Nummer" HorizontalAlignment="Center"
                                Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
@@ -100,13 +95,141 @@
         </Grid>
 
 
-
-
-
-
-
-
         <Grid Grid.Column="0" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".5*"/>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="ID" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Center"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Name" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Adresse" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                <TextBlock Text="Nummer" 
+                           Style="{StaticResource TextSizingforMiddelPart}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+
+        </Grid>
+
+        <Grid Grid.Column="0" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".5*"/>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- ID Data -->
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Center">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Id}" 
+                                       FontSize="24"
+                                       >
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" 
+                                       FontSize="24">
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Adresse}" 
+                                       FontSize="24">
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                <ListView
+                    ItemsSource="{Binding ItemCollection}"
+                    SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                    IsEnabled="{Binding EnabledStateCollection}"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Nummer}" 
+                                       FontSize="24">
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+        </Grid>
+
+
+        <!--<ListView Grid.Column="0" Grid.Row="2"
+                      
+                      ItemsSource="{Binding ItemCollection}"
+                      SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
+                      IsEnabled="{Binding EnabledStateCollection}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ItemDescription2}" FontSize="24">
+                      
+                    </TextBlock>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+        </ListView>-->
+
+
+
+
+
+
+        <!--Bottom Part-->
+        <Grid Grid.Column="0" Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
@@ -115,18 +238,18 @@
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Bottom">
                 <Button Command="{Binding ViewCommandsObj[0]}" 
                         Content="{Binding ViewCommandsDesc[0]}"
-                        Style="{StaticResource ButtonStyle}"/>
+                        Style="{StaticResource ButtonStyle}">
+                </Button>
 
                 <Button Command="{Binding ViewCommandsObj[1]}" 
                         Content="{Binding ViewCommandsDesc[1]}"
                         Style="{StaticResource ButtonStyle}"  />
-                
+
                 <Button Command="{Binding ViewCommandsObj[2]}" 
                         Content="{Binding ViewCommandsDesc[2]}"
                         Style="{StaticResource ButtonStyle}" />
 
-                <TextBlock Grid.Column="1" 
-                           Grid.Row="0" 
+                <TextBlock 
                            VerticalAlignment="Bottom" 
                            HorizontalAlignment="Center"
                            
