--- a/UpKeepProject/UpKeepProject/MainPage.xaml
+++ b/UpKeepProject/UpKeepProject/MainPage.xaml
@@ -17,11 +17,13 @@
 
 
     <NavigationView SelectedItem ="{Binding SelectedMenuItem, Mode=TwoWay}">
-        <NavigationView.MenuItems>
+       
+
+            <NavigationView.MenuItems>
             <Image Source="Assets/Image/cleanplus-logo-alm.png"
                    Margin="60,0,0,0"/>
-            <NavigationViewItem Content="Personale" Tag="OpenPersonaleView"/>
-            <NavigationViewItem Icon="People"  Content="Kunde" Tag="OpenKundeView"/>
+            <NavigationViewItem Icon="People" Content="Personale" Tag="OpenPersonaleView"/>
+            <NavigationViewItem Icon="Contact"  Content="Kunde" Tag="OpenKundeView"/>
         </NavigationView.MenuItems>
         <Frame x:Name="AppFrame"/>
     </NavigationView>
