--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -18,6 +18,7 @@
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Margin" Value="10,10,10,10"/>
+            <Setter Property="Foreground" Value="#30333F"/>
         </Style>
         <Style x:Key="TextBlockDetailsStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="24"/>
@@ -35,6 +36,7 @@
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Margin" Value="10,30,10,10"/>
+            <Setter Property="Foreground" Value="#30333F"/>
         </Style>
         <Style x:Key="CreateButton" TargetType="Image">
             <Setter Property="Width" Value="50"/>
@@ -71,29 +73,29 @@
 
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Name" HorizontalAlignment="Center"
-                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                           Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
-                             IsHitTestVisible="{Binding EnabledStateDetails}"
-                             Background="{Binding BackgroundColorDetails}"
-                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                         IsHitTestVisible="{Binding EnabledStateDetails}"
+                         Background="{Binding BackgroundColorDetails}"
+                         Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Adresse" HorizontalAlignment="Center"
-                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                           Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
-                             IsHitTestVisible="{Binding EnabledStateDetails}"
-                             Background="{Binding BackgroundColorDetails}"
-                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                         IsHitTestVisible="{Binding EnabledStateDetails}"
+                         Background="{Binding BackgroundColorDetails}"
+                         Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
 
             <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
                 <TextBlock Text="Nummer" HorizontalAlignment="Center"
-                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                           Style="{StaticResource TextBlockDetailsStyle}"/>
                 <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
-                             IsHitTestVisible="{Binding EnabledStateDetails}"
-                             Background="{Binding BackgroundColorDetails}"
-                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                         IsHitTestVisible="{Binding EnabledStateDetails}"
+                         Background="{Binding BackgroundColorDetails}"
+                         Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
         </Grid>
         <!--#endregion-->
@@ -185,9 +187,7 @@
                     HorizontalAlignment="Left">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Adresse}" 
-                                       FontSize="24">
-                                </TextBlock>
+                                <TextBlock Text="{Binding Adresse}" Style="{StaticResource TextForAddedText}"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
@@ -202,9 +202,7 @@
                     HorizontalAlignment="Left">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Nummer}" 
-                                       FontSize="24">
-                                </TextBlock>
+                                <TextBlock Text="{Binding Nummer}" Style="{StaticResource TextForAddedText}"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
@@ -223,8 +221,7 @@
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Bottom">
                 <Button Command="{Binding ViewCommandsObj[0]}" 
                         Content="{Binding ViewCommandsDesc[0]}"
-                        Style="{StaticResource ButtonStyle}">
-                </Button>
+                        Style="{StaticResource ButtonStyle}"/>
 
                 <Button Command="{Binding ViewCommandsObj[1]}" 
                         Content="{Binding ViewCommandsDesc[1]}"
@@ -234,10 +231,8 @@
                         Content="{Binding ViewCommandsDesc[2]}"
                         Style="{StaticResource ButtonStyle}" />
 
-                <TextBlock 
-                           VerticalAlignment="Bottom" 
+                <TextBlock VerticalAlignment="Bottom" 
                            HorizontalAlignment="Center"
-                           
                            Text="{Binding ViewStateDesc}" 
                            Style="{StaticResource TextBlockStateStyle}" />
 
